Vertical scrollbar fixes, cta position based on product popup visibility

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // height: calc(100vh - calc(100vh - 100%));
-    min-height: 100vh;
+    height: calc(100vh - calc(100vh - 100%));
+    // min-height: 100vh;
     margin: 0 auto;
     padding: 30px 0;
 
@@ -51,11 +51,11 @@
   .modal-content {
     max-width: 100%;
     min-width: 350px;
-    // aspect-ratio: 608 / 1080;
-    width: 100%;
-    height: auto;
+    aspect-ratio: 608 / 1080;
+    // width: 100%;
+    // height: auto;
     // min-height: calc(100vh - 60px);
-    // overflow: hidden;
+    overflow: hidden;
     border: 0;
     border-radius: 12px;
   }
@@ -79,8 +79,9 @@
   .modal-cta {
     .cta {
       position: absolute;
-      z-index: 1;
       background: none;
+      transition: 0.3s ease-out;
+      z-index: 1;
 
       .btn-wrapper {
         display: flex;
@@ -129,6 +130,17 @@
       &--right {
         right: 10px;
         bottom: 80px;
+      }
+
+      &.active {
+        &.cta--left,
+        &.cta--right {
+          bottom: 130px;
+        }
+
+        &.cta--bottom {
+          display: none;
+        }
       }
     }
   }
