--- a/src/scss/components/_story-slider.scss
+++ b/src/scss/components/_story-slider.scss
@@ -1,9 +1,11 @@
 .story {
 	border-radius: 12px;
+	height: 100%;
 	overflow: hidden;
 
 	&__slider {
 		position: relative;
+		height: 100%;
 
 		&::before {
 			content: '';
@@ -127,6 +129,7 @@
 		transform: translateY(100%);
 		transition: 0.3s ease-out;
 		opacity: 0;
+		z-index: 1;
 
 		&.active {
 			max-height: 300px;
@@ -152,6 +155,7 @@
 			font-size: 18px;
 			transition: 0.3s ease-out;
 			cursor: pointer;
+			z-index: 1;
 
 			&:hover {
 				background-color: var(--white);
